--- a/wth_foundation/wth/trunk/util/i2c/README
+++ b/wth_foundation/wth/trunk/util/i2c/README
@@ -1,4 +1,5 @@
 Using kernel module of USB ISS for I2C communication
+====================================================
 
 Download from https://github.com/groeck/devantech
 
@@ -55,27 +56,56 @@ Aufnahme: WAVE 'hh10d.wav' : Signed 16 bit Little Endian, Rate: 44100 Hz, stereo
 Start octave
 octave
 
-Load audio in GNU Octave
-octave:12> [y, Fs, bps] = wavread ("hh10d.wav", 80)
-y =
+# Load audio in GNU Octave
+[y, Fs, bps] = wavread ("hh10d.wav");
 
-   0.0000000   0.0000000
-  -0.0000610   0.0000000
-   0.0001221   0.0000000
-  -0.0002441   0.0000000
-   0.0003662   0.0000000
-  -0.0004883   0.0000000
-   0.0004578   0.0000000
-  -0.0001831   0.0000000
-  -0.0003662   0.0000000
-   0.0014648   0.0000000
-...
+# y contains two channels stereo
+# 
+# the 1st channel contains the audio signal of the HH10D
+# the 2nd channel contains zero audio signal
+#
+# y =
+#
+#   0.0000000   0.0000000
+#  -0.0000610   0.0000000
+#   0.0001221   0.0000000
+#  -0.0002441   0.0000000
+#   0.0003662   0.0000000
+#  -0.0004883   0.0000000
+#   0.0004578   0.0000000
+#  -0.0001831   0.0000000
+#  -0.0003662   0.0000000
+#   0.0014648   0.0000000
+#...
+#
+#Fs =  44100
+#bps =  16
 
-Fs =  44100
-bps =  16
+# extract 1st channel
+y1ch = y(1:length(y));
 
-Plot data
-octave:13> plot(y)
+# Plot 1st 80 data points of 1st channel
+#plot(y1ch(1:80))
+
+# calculate FFT of audiosignal
+Y = fft(y1ch);
+Y(1) = [];
+
+# calculate power spectrum from FFT
+n=length(Y);
+power = abs(Y(1:floor(n/2))).^2;
+samplerate=44100;
+nyquist = samplerate/2;
+freq = (1:n/2)/(n/2)*nyquist;
+
+# plot power spectrum
+#plot(freq,power)
+#xlabel('frequency [Hz]')
+#title('HH10D humidity sensor frequency readout')
+
+# find frequency of powermaximum 
+index=find(power==max(power));
+freq(index)
 
 
 Calculate frequency of audiosignal
